--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "vitest",
-    "test:run": "vitest run"
+    "lint": "next lint"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "@supabase/ssr": "^0.1.0",
-    "next": "14.1.0",
+    "next": "14.2.21",
     "react": "^18",
     "react-dom": "^18",
     "next-themes": "^0.2.1",
@@ -29,10 +27,6 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "vitest": "^1.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "jsdom": "^24.0.0",
-    "@testing-library/react": "^14.1.0"
+    "tailwindcss": "^3.3.0"
   }
 }
