--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "@tiptap/extension-placeholder": "^3.19.0",
@@ -23,6 +24,7 @@
     "@tiptap/starter-kit": "^3.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.312.0",
     "mammoth": "^1.11.0",
     "next": "14.2.21",
