--- a/package.json
+++ b/package.json
@@ -16,23 +16,16 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tiptap/core": "^2.11.5",
-    "@tiptap/extension-bold": "^2.11.5",
-    "@tiptap/extension-bullet-list": "^2.11.5",
-    "@tiptap/extension-document": "^2.11.5",
-    "@tiptap/extension-hard-break": "^2.11.5",
-    "@tiptap/extension-heading": "^2.11.5",
-    "@tiptap/extension-history": "^2.11.5",
-    "@tiptap/extension-horizontal-rule": "^2.11.5",
-    "@tiptap/extension-italic": "^2.11.5",
-    "@tiptap/extension-list-item": "^2.11.5",
-    "@tiptap/extension-ordered-list": "^2.11.5",
-    "@tiptap/extension-paragraph": "^2.11.5",
     "@tiptap/extension-placeholder": "^2.11.5",
-    "@tiptap/extension-strike": "^2.11.5",
-    "@tiptap/extension-text": "^2.11.5",
+    "@tiptap/extension-table": "^2.11.5",
+    "@tiptap/extension-table-cell": "^2.11.5",
+    "@tiptap/extension-table-header": "^2.11.5",
+    "@tiptap/extension-table-row": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -48,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8",
     "eslint-config-next": "14.2.21",
     "postcss": "^8",
