feat: add service worker with @serwist/next for offline capability and asset caching

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Serwist service worker (generated at build time)
+public/sw*
+public/swe-worker*
