--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@sentry/nextjs": "^10.39.0",
+    "@serwist/next": "^9.5.6",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tiptap/core": "^2.11.5",
@@ -58,6 +59,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.21",
     "postcss": "^8",
+    "serwist": "^9.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
