--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.468.0",
+    "mammoth": "^1.8.0",
     "next": "14.2.21",
     "next-themes": "^0.4.4",
     "react": "^18",
